# Drone_Firmware

./: .gitignore  CallMatlab.sh  Closs_all_terminals.sh  How_To_Connect_With_Real_Drone.md  How_To_Install_Drone_Firmware.md  How_To_Run_Simulator_Manually.md  Installation_Instruction_For_New_PC.md  ReadMe.md  Readme.md  RunSimulator.sh  RunSimulator_NoBuild.sh  Run_SITL.md  Software in the Loop (SITL).txt  simulator instructions.md
3DR_Telemery/: Readme.md
Edison/: ReadMe.md
Matlab/: 1CycleMDP_Results.eps  3D_Directional_Gain_2Yagi_Element.txt  Control_Vector_Selection.m  Control_Vector_Selection_For_Tracking.m  Gain_Angle_Table.txt  Get_Antenna_Gain.m  MC_Results.eps  Plot_MC_Results.m  Plot_MC_Results_Ver2.m  Plot_RMS_Result_for_EachTarget.m  Plot_Target_Estimated_Position.m  Plot_Truth_UAV.m  Read_Pulses_With_Index.m  SIM_Estimate_Postion.eps  SIM_POMDP_Cycles.eps  SIM_Track_Postion.eps  SITL_Estimate_Postion.eps  Send_Command_To_UAV.m  Send_Command_UAV.m  UAV_Control_Sets.m  UAV_Control_Sets_With_Cycles.m  UAV_MultiTargets_Localisation.m  (+9 more)
Michael/pulse_server/: Cargo.toml  edison_autostart_installation.md
Michael/pulse_server/config/: 3D_Directional_Gain_Pattern.txt  hackrf_config (copy).json  hackrf_config.json
Michael/pulse_server/src/: gain_control.rs  hackrf_task.rs  main.rs  test_task.rs  util.rs
Michael/telemetry_host/: .project  Cargo.toml  Hoa_log.txt  Hoa_log1.txt  log.txt
Michael/telemetry_host/src/: main.rs  mavlink_handler.rs  pulse_handler.rs
Michael_Tools/pulse_server/: .project  Cargo.toml
Michael_Tools/pulse_server/config/: Gain_Angle_Table.txt
Michael_Tools/pulse_server/src/: test_task.rs
(+101 files in other folders)
