[package]
name = "pulse_server"
version = "0.1.0"
authors = ["Michael Chesser"]

[dependencies]
rand="0.3.0"
hyper = "0.10"
rustc-serialize = "0.3.24"
byteorder = "1"
log = "0.3"
log4rs = { version = "0.7", features = ["json_format"] }
mio = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
csv = "0.14"
lazy_static = "0.2"
cgmath = "0.14.1"
hackrf = { git = "https://github.com/mchesser/rust-hackrf" }
common = { git = "https://github.com/mchesser/trackerbots_core" }
animal_detector = { git = "https://github.com/mchesser/trackerbots_core" }
