[package]
name = "telemetry_host"
version = "0.1.0"
authors = ["Michael Chesser"]

[dependencies]
byteorder = "1"
lazy_static = "0.2"
mavlink = "0.4"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"

common = { git = "https://github.com/mchesser/trackerbots_core" }
