[package]
name = "pulse_server"
version = "0.1.0"
authors = ["Michael Chesser"]

[dependencies]
rand="0.3.0"
hyper = "0.10"
rustc-serialize = "0.3"
byteorder = "0.5"
log = "0.3"
log4rs = { version = "0.5", features = ["json_format"] }
mio = "0.6"
serde = "0.8"
serde_derive = "0.8"
serde_json = "0.8"
csv = "0.14"
lazy_static = "0.2"
cgmath = "*"
hackrf = { git = "https://github.com/mchesser/rust-hackrf" }
common = { git = "https://github.com/mchesser/trackerbots_core" }
animal_detector = { git = "https://github.com/mchesser/trackerbots_core" }